--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,15 @@ addons:
       - g++-6
       - cmake
 
+
+install:
+- cd ${TRAVIS_BUILD_DIR}
+- wget http://ftp.de.debian.org/debian/pool/main/l/lcov/lcov_1.11.orig.tar.gz
+- tar xf lcov_1.11.orig.tar.gz
+- sudo make -C lcov-1.11/ install
+- gem install coveralls-lcov
+
+
 script:
   - export CXX=/usr/bin/g++-6
   - cd test
@@ -21,6 +30,14 @@ script:
   - cmake ..
   - cmake --build .
   - ./ZipIterTests
+
+
+after_success:
+- lcov --directory . --capture --output-file coverage.info
+- lcov --remove coverage.info 'tests/*' '/usr/*' --output-file coverage.info
+- lcov --list coverage.info
+- coveralls-lcov --repo-token=${COVERALLS_TOKEN} coverage.info
+
 
 notifications:
   email: false
