--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ script:
 
 after_success:
 - lcov --directory . --capture --output-file coverage.info
-- lcov --remove coverage.info 'tests/*' '/usr/*' --output-file coverage.info
+- lcov --remove coverage.info 'tests/*' '/usr/*' '/gtest/*' --output-file coverage.info
 - lcov --list coverage.info
 - coveralls-lcov --repo-token=${COVERALLS_TOKEN} coverage.info
 
